# fakeOWL

./: CMakeLists.txt  README.md
cmake/: configure_fake_owl.cmake  optix_launch_params_shim.cpp  owlConfig.cmake.in
include/owl/: owl.h  owl_device.h  owl_ext.h  owl_host.h
include/owl/common/: owl-common.h
include/owl/common/arrayND/: array2D.h  array3D.h
include/owl/common/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  fixedpoint.h  random.h  vec.h
include/owl/common/math/vec/: compare.h  functors.h  rotate.h
include/owl/common/parallel/: parallel_for.cpp  parallel_for.h
include/owl/cuda/std/: limits
include/owl/fakeOwl/: cuda_gl_interop.h  math_constants.h  optix.h  optix_device.h  optix_stubs.h
include/owl/fakeOwl/fake/: cuda.h  cuda_intrinsics.h  math_constants.h  optix.h  optix_device.h  owl.h  version.h
samples/optix7course/: CMakeLists.txt
src/: AnyHit.cpp  AnyHit.h  Bounds.cpp  Bounds.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ClosestHit.cpp  ClosestHit.h  Context.cpp  Context.h  DataType.h  Geom.cpp  Geom.h  GeomGroup.cpp  GeomGroup.h  GeomType.cpp  GeomType.h  Group.cpp  Group.h  InstanceGroup.cpp  InstanceGroup.h  Intersect.cpp  Intersect.h  Logging.cpp  Logging.h  Miss.cpp  Miss.h  Module.cpp  Module.h  Params.cpp  Params.h  Program.cpp  Program.h  RayGen.cpp  RayGen.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  (+12 more)
src/backend/: Visionaray.h
